Fix margin-bottom on timeline so it doesn't shift the steps when re-starting.

--- a/src/scss/_brew-it.scss
+++ b/src/scss/_brew-it.scss
@@ -201,7 +201,7 @@
   margin-right: 0;
   height: 2.5ex;
   margin-top: -5ex;
-  margin-bottom: 2ex;
+  margin-bottom: 1.31ex;
     -webkit-transition: width ($time)+s, -webkit-transform ($time)+s;
     transition: width ($time)+s, transform ($time)+s;
     -webkit-transition-timing-function: linear;
